Have cat drawn on screen, next animate it walking.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </script>
 </head>
 <body onLoad="init();">
-    <canvas id="legend_of_cat" width="1280" height="720">
+    <canvas id="Legend of Cat" width="1280" height="720">
         alternate content
     </canvas>
     <p>
