Moved to timer based update, also handling keys more robustly.  Need to have non-arrow keys for movement also but not working yet.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="libs/easeljs-0.7.1.min.js"></script>
-    <script src="libs/preloadjs-NEXT.min.js"></script>
+    <script src="libs/preloadjs-0.4.1.min.js"></script>
     <script type='text/javascript' src='script.js'>
     </script>
 </head>
