--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="libs/easeljs-0.7.1.min.js"></script>
     <script src="libs/preloadjs-0.4.1.min.js"></script>
+    <script src="libs/soundjs-0.5.2.min.js"></script>
     <script type='text/javascript' src='script.js'>
     </script>
 </head>
