--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a href="https://github.com/lucasw/legend_of_cat">https://github.com/lucasw/legend_of_cat</a>
 
 <br>
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This music by  <a href="http://incompetech.com/">Kevin MacLeod</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 International License</a>.
+<br>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/StillImage" property="dct:title" rel="dct:type">Legend of Cat artwork</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/lucasw/" property="cc:attributionName" rel="cc:attributionURL">Lucas Walter</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
 </body>
 </html>
